eclipseWorkspace/AK SFDC/src/objects/Bullhorn_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Note_bh_id__c</fullName>
        <externalId>true</externalId>
        <label>Note_bh_id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Links__c</fullName>
        <label>Number of Links</label>
        <summaryForeignKey>Bullhorn_Note_Link__c.UserComment_bh_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Bullhorn Note</label>
    <nameField>
        <displayFormat>bh_note{0000}</displayFormat>
        <label>Bullhorn Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bullhorn Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>